# cs555p3

cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/: README-template.md  README.md
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p1/: Cargo.toml  Makefile  README.md  Tasklist.md
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p1/client/: Cargo.toml
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p1/client/src/: main.rs
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p1/server/: Cargo.toml
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p1/server/src/: main.rs
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p1/types/: Cargo.toml
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p1/types/src/: lib.rs
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p2/: README.md  Tasklist.md  certificate  run-client.sh
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p2/client/: Cargo.toml
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p2/client/src/: main.rs
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p2/common/: Cargo.toml
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p2/common/src/: lib.rs  lib.rs.bak
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p2/server/: Cargo.toml
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p2/server/src/: main.rs  main.rs.bak
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p3/: Makefile  run-server.sh
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p3/common/src/: lib.rs
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p3/server/: Cargo.toml  certprivkey
cs455-555-1-s22-team-018-main/cs455-555-1-s22-team-018-main/p3/server/src/: main.rs
