[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat_types = { path = "../types" }
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.53"
tokio-util = { version = "0.7.0", features = ["codec"] }
futures-util = { version = "0.3.21", features = ["sink"] }
serde_json = "1.0.79"
ctrlc = "3.2.1"
clap = { version = "3.1.2", features = ["derive"] }
